# gemini-chatbot

backend/: pyproject.toml
backend/src/: main.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/chatBubble/: chatBubble.component.tsx  index.ts
frontend/src/components/sendMessageForm/: index.ts  sendMessageForm.component.tsx
