[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Hiru Ranasinghe <hirurana99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
